syntax = "proto3";

package admin;

option go_package = "pkg/admin/pb";

service AdminService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc AdminValidate(AdminValidateRequest) returns (AdminValidateResponse) {}
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse) {}
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message RegisterRequest {
    string adminname = 1;
    string password = 2;
}
  
message RegisterResponse {
    int64 status = 1;
    string error = 2;
}

message LoginRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string accesstoken = 3;
}

message ChangePasswordResponse {
  int64 status = 1;
  string error = 2;
}

message ChangePasswordRequest {
  int64 id = 1;
  string password = 2;
}

message AdminValidateRequest {
  string accesstoken = 1;
}

message AdminValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 adminid = 3;
  string source = 4;
}


